--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,19 @@
-<!-- upload -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>DevOps Days Sponsor Logo Generator</title>
+  </head>
+  <body>
+    <form action="/">
+      <label for="url">URL of logo:</label>
+      <input type="text" name="url" id="url"/>
+      <input type="submit" name="submit" value="Submit">
+    </form>
+    <form action="/" method="post" enctype="multipart/form-data">
+      <label for="file">Or upload logo:</label>
+      <input type="file" name="file" id="file">
+      <input type="submit" name="submit" value="Submit">
+    </form>
+    
+  </body>
+</html>
